{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 119,
  "lineage": "b0246ec5-8573-f6c6-bae7-307f0012437f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:585479176787:instance/i-0f9fa8d156f94d164",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9fa8d156f94d164",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demokey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04eaffe2fade6a8b8",
            "private_dns": "ip-10-10-1-91.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.91",
            "public_ip": "54.174.84.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a68e35ff06330feb",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00902cb3b70525ff7",
            "tags": {
              "Deployment": "Demo",
              "Name": "Primary",
              "Role": "Primary",
              "UUID": "7866e85b-0a85-490a-880b-7dfb71ed56b9"
            },
            "tags_all": {
              "Deployment": "Demo",
              "Name": "Primary",
              "Role": "Primary",
              "UUID": "7866e85b-0a85-490a-880b-7dfb71ed56b9"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ad3473c8b682a3f8"
            ]
          },
          "dependencies": [
            "aws_security_group.demo-sg",
            "aws_subnet.demo-subnet",
            "aws_vpc.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:585479176787:instance/i-0f32fe37d6e6069c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f32fe37d6e6069c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demokey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04407ba04d911e181",
            "private_dns": "ip-10-10-1-54.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.54",
            "public_ip": "52.21.240.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0d9133f1bc81ea6e5",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00902cb3b70525ff7",
            "tags": {
              "Deployment": "Demo",
              "Name": "Secondary",
              "Role": "Secondary",
              "UUID": "7866e85b-0a85-490a-880b-7dfb71ed56b9"
            },
            "tags_all": {
              "Deployment": "Demo",
              "Name": "Secondary",
              "Role": "Secondary",
              "UUID": "7866e85b-0a85-490a-880b-7dfb71ed56b9"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ad3473c8b682a3f8"
            ]
          },
          "dependencies": [
            "aws_key_pair.pk",
            "aws_security_group.demo-sg",
            "aws_subnet.demo-subnet",
            "aws_vpc.vpc-demo",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585479176787:internet-gateway/igw-0f5a4939b7979d1d0",
            "id": "igw-0f5a4939b7979d1d0",
            "owner_id": "585479176787",
            "tags": {
              "Deployment": "Demo"
            },
            "tags_all": {
              "Deployment": "Demo"
            },
            "vpc_id": "vpc-055d687287912d006"
          },
          "dependencies": [
            "aws_vpc.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585479176787:route-table/rtb-0a516a58f2676a4b2",
            "id": "rtb-0a516a58f2676a4b2",
            "owner_id": "585479176787",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f5a4939b7979d1d0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-055d687287912d006"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo-ig",
            "aws_vpc.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03214b2f62b6486b0",
            "route_table_id": "rtb-0a516a58f2676a4b2",
            "subnet_id": "subnet-00902cb3b70525ff7"
          },
          "dependencies": [
            "aws_internet_gateway.demo-ig",
            "aws_route_table.demo-rt",
            "aws_subnet.demo-subnet",
            "aws_vpc.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585479176787:security-group/sg-0ad3473c8b682a3f8",
            "description": "Demo-Sec-Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad3473c8b682a3f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "68.201.197.12/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Demo-Sec-Group",
            "name_prefix": "",
            "owner_id": "585479176787",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment": "Demo"
            },
            "tags_all": {
              "Deployment": "Demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-055d687287912d006"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-demo"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585479176787:subnet/subnet-00902cb3b70525ff7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00902cb3b70525ff7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585479176787",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Deployment": "Demo",
              "Name": "demo-subnet"
            },
            "tags_all": {
              "Deployment": "Demo",
              "Name": "demo-subnet"
            },
            "vpc_id": "vpc-055d687287912d006"
          },
          "dependencies": [
            "aws_vpc.vpc-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:585479176787:vpc/vpc-055d687287912d006",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-00707f2a9c8ae4d96",
            "default_route_table_id": "rtb-0f2ecc74fcdc731d0",
            "default_security_group_id": "sg-0bc503c597b8ac5e1",
            "dhcp_options_id": "dopt-0d219170950d54aae",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-055d687287912d006",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2ecc74fcdc731d0",
            "owner_id": "585479176787",
            "tags": {
              "Deployment": "Demo",
              "Name": "vpc-demo"
            },
            "tags_all": {
              "Deployment": "Demo",
              "Name": "vpc-demo"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}